<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:weightSum="1">

    <Button
            android:text="@string/button_addmovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonAdd"/>
    <Button
            android:text="@string/button_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonView"/>
    <Button
            android:text="@string/button_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/buttonRate"/>
</LinearLayout>
